Allow use of Reader for parsing.
Use BedeworkException

Make parser static